# edupbl_back

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
app/: app.py  main.py
app/core/: config.py  settings.py
app/domains/auth/: routers.py  schemas.py
app/domains/delays/: enums.py  models.py  notifications.py  periods.py  routers.py  schemas.py  window.py
app/shared/: database.py  date_validator.py  password_validator.py  schemas.py  security.py  seed.py  text_utils.py
data/: GUIA_RAPIDO_CSVs.md  README.md  admins.csv.example  alunos.csv.example  professores.csv.example  professores_dt.csv.example
data/horarios/: folgas_professores.csv.example  horario_sala_1.csv.example
data/usuarios/: GUIA_RAPIDO_CSVs.md  admins.csv.example  alunos.csv.example  coordenadores.csv.example  porteiros.csv.example  professores.csv.example  professores_dt.csv.example  responsaveis.csv.example
migrations/: env.py  script.py.mako
migrations/versions/: 010981d7ac25_merge.py  071ddbdaffde_populate_db.py  3de7fb8d67ec_create_initial_tables.py  52ecdef5caed_merge.py  5b98d86b99c7_adicionar_tabela_classrooms_e_fk_.py  62673cf35b89_initial.py  731ab6188cc3_merge.py  79bd589ece1b_add_fields_to_user.py  84f6058d7153_inicial.py  874b6bb98509_adicionar_must_change_password_e_.py  924749d81359_add_rbac_system_to_users.py  969182b2d57f_add_occurrence_type_to_occurrences.py  9694c5718913_add_rbac_system_to_users.py  988abdae889e_merge.py  a1b2c3d4e5f6_add_notifications_and_occurrence_forwarded.py  a1b2c3d4e5f6_guardian_student_occurrences.py  a1b2c3d4e5f6_schedule_slots_classroom_nullable.py  a3f2c1d8e9b0_add_avatar_url_and_phone_to_users.py  b4d500355699_create_initial_tables_with_rbac.py  bef98eceeee2_initial.py  c04a5d810491_initial.py  d1596f76447a_add_schedules.py  e1b64269468c_criar_tabelas_iniciais.py  e4a1f9c2b3d5_rename_registered_by_to_recorded_by_in_delays.py  f7623a4587d2_create_weekday_enum.py
plano/: 0-DASHBOARD-PERMISSOES-FRONTEND.md  0-ROADMAP_MVP.md  1-INTEGRACAO_WHATSAPP.md  1-OCORRENCIAS-BACKEND.md  1-SCHEDULES.md  2-FEATURE_DELAYS.md  2-SEGURANCA_DADOS_REAIS.md  3-FEATURE_DELAYS.md  3-INTEGRACAO_WHATSAPP.md  3-SEGURANCA_DADOS_REAIS.md  5-INTEGRACAO_WHATSAPP.md
scripts/: archive.py  generate_schedules_csv.py  init_db.py  reset_db.py  seed.py  seed_db.py
tests/: conftest.py  test_app.py  test_auth.py  test_auth_extended.py  test_core.py  test_coverage_gaps_1.py  test_coverage_gaps_2.py  test_db.py  test_delays.py  test_occurrences.py  test_occurrences_extended.py  test_rbac.py  test_route_protection.py  test_schedules.py  test_schedules_extended.py  test_schedules_gaps.py  test_security.py  test_shared_seed_rbac.py  test_users.py  test_users_extended.py
(+44 files in other folders)
